src/log/build_2025-05-30_16-37-34/xbox_control_pkg/stderr.log
  File "/home/ras4/nuc_ws/src/install/xbox_control_pkg/lib/python3.10/site-packages/xbox_control_pkg/control_rizz.py", line 37
    )
    ^
SyntaxError: positional argument follows keyword argument

